# ChatApp

./: .gitignore  ChatApp.sln
api/: databse.db  go.mod  main.go
api/database/: .clang-format  CMakeLists.txt  compile.ps1  compile_flags.txt  format.ps1
api/database/src/: sqlsys.c  sqlsys.h
api/database/test/: base.sql  bruhdasdsa.db  dataa.csv  databse.db  insert.sql  table.sql
api/libs/: sqlite3.exp  sqlite3.lib
database/: base.sql  database.db
src/: Database.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Login.Designer.cs  Login.cs  Login.resx  Program.cs  Session.cs
